Index Bug Fixes
Index bug fixes for the main hero image on iOS. Not fully resolved yet,
but fixed the gradient overlay that wasn't displaying properly.

Previously it was covering hte entire screen due to the "Cover" css
property. This caused it to not repeat correctly and overlay the image
like a good little overlay is supposed to do.

--- a/Brotherhood Revised/css/stats.css
+++ b/Brotherhood Revised/css/stats.css
@@ -70,23 +70,21 @@
         max-width: calc(1000px - 1em);
         padding: .5em;
     }
+
     .statsSection {
         margin: 0 auto;
         padding: 0em 1em 0em 1em;
+        box-shadow:none;
     }
+
     .statCenter {
         width: 100%;
     }
-    .informationRow {
-         float: left;
-         width: 100%;
-         margin: 0;
-         min-width: 0;
-     }
-}
 
-@media (max-width: 769px) {
-    .statCenter {
-        width: calc(100% - 6em);
+    .informationRow {
+        float: left;
+        width: 100%;
+        margin: 0;
+        min-width: 0;
     }
 }
